[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Enemies/Wormlette/WormletteController.gd" type="Script" id=1]
[ext_resource path="res://Levels/Enemies/Wormlette/Wormlette.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]

radius = 84.0

[node name="WormletteController" type="Node2D"]
position = Vector2( 60, 42 )
script = ExtResource( 1 )

[node name="Wormlettes" type="Node2D" parent="."]

[node name="Wormlette" parent="Wormlettes" instance=ExtResource( 2 )]
position = Vector2( -18, 0 )

[node name="Wormlette2" parent="Wormlettes" instance=ExtResource( 2 )]

[node name="Wormlette3" parent="Wormlettes" instance=ExtResource( 2 )]
position = Vector2( 18, 0 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 0.984314, 0.984314, 0.984314, 0.376471 )
shape = SubResource( 1 )

[connection signal="is_damaged" from="Wormlettes/Wormlette" to="." method="on_take_damage"]
[connection signal="is_damaged" from="Wormlettes/Wormlette2" to="." method="on_take_damage"]
[connection signal="is_damaged" from="Wormlettes/Wormlette3" to="." method="on_take_damage"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
